@@ -4,6 +4,9 @@ Changelog
 1.0b8 - 2011-04-12
 ------------------
 
+* Use unique urls for accessing the original scale.
+  [elro]
+
 * Avoid Content-Disposition for image scales.
   [elro]
 
